# pyECSS

./: .gitignore  .readthedocs.yaml  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yml
docs/: changelog.rst  conf.py  index.rst  installation.rst  requirements.txt  resources.rst
docs/source/: index.rst  installation.rst  visitor.rts
docs/source/tutorials/: tutorial_component.rst  tutorial_entity.rst  tutorial_system.rst
pyECSS/: Component.py  ECSSManager.py  Entity.py  Event.py  System.py  _version.py  utilities.py
pyECSS/GA/: GATransformSystem.py  GA_Component.py  GAutils.py  dual_quaternion.py
pyECSS/docs/: pyECSS.yml
pyECSS/examples/: 1. ECSS - An intro.ipynb  2. Patterns - An intro.ipynb  3. ECSS - key aspects.ipynb  4. Traversing the Scenegraph.ipynb  custom_ComponentSystem.py
pyECSS/tests/: test_ECSSManager.py  test_EntityComponents.py  test_GA.py  test_System.py  test_utilities.py
