[metadata]
name = pyECSS
version = 1.0.4
description = pyECSS (Entity Component Systems in a Scenegraph)
long_description_content_type = text/markdown
long_description = file: README.md, LICENSE.txt
keywords = ECS, Computer Graphics, Scenegraph, Python design patterns
license = Apache License
classifiers =
    License :: OSI Approved :: Apache Software License
        Environment :: MacOS X 
        Environment :: Win32 (MS Windows)
        Environment :: X11 Applications
        Operating System :: Microsoft :: Windows
        Operating System :: MacOS
        Operating System :: Unix
        Programming Language :: Python :: 3.9

author = George Papagiannakis
author_email = papagian@csd.uoc.gr
maintainer = Manos Kamarianakis
maintainer_email = m.Kamarianakis@gmail.com
url = http://george.papagiannakis.org

[options]
packages = find:
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.packages.find]
